force-app/main/default/objects/ReservedItem__c/ReservedItem__c.object-meta.xml
<CustomObject>
    <label>Reserved Item</label>
    <nameField>
        <displayFormat>RE-{0000}</displayFormat>
        <label>Reserved Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reserved Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>