force-app/main/default/objects/ReservedItem__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reserved Items</relationshipLabel>
    <relationshipName>Reserved_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>