force-app/main/default/objects/ReservedItem__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reservation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This item is available!</errorMessage>
        <filterItems>
            <field>Inventory__c.InventoryStatus__c</field>
            <operation>equals</operation>
            <value>Unavailable</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Reserved Items</relationshipLabel>
    <relationshipName>reservation</relationshipName>
    <type>Lookup</type>
</CustomField>