force-app/main/default/objects/ReservedItem__c/fields/ReservationStatus__c.field-meta.xml
<CustomField>
    <fullName>ReservationStatus__c</fullName>
    <label>Reservation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
                <color>#FF0000</color>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
                <default>true</default>
                <label>Waiting</label>
            </value>
            <value>
                <fullName>Successful Rented</fullName>
                <color>#33FF33</color>
                <label>Successful Rented</label>
            </value>
            <value>
                <fullName>Time Counting Down</fullName>
                <color>#FFFF66</color>
                <label>Time Counting Down</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>