force-app/main/default/objects/ReservedItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Reservation__c</columns>
    <columns>ContactName__c</columns>
    <columns>NAME</columns>
    <columns>ReservationStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>